# frontend

./: .coveragerc  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: maintainability.yaml  reliability.yaml  security.yaml
src/: main.py
src/pages/: alert_settings.py  auth.py  dashboard.py  history.py  home.py  notification_center.py  register.py
src/tests/: test_alert_settings.py  test_auth.py  test_dashboard.py  test_history.py  test_main.py  test_notification_center.py  test_register.py
src/utilities/: sidebar.py  wind_direction.py
src/utils/: token.py
